--- a/Talk2Ticket/pom.xml
+++ b/Talk2Ticket/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.alphacephei/vosk -->
+		<dependency>
+			<groupId>com.alphacephei</groupId>
+			<artifactId>vosk</artifactId>
+			<version>0.3.45</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>mysql</groupId>
